--- a/app/views/newspaper_works/base/_attribute_rows.html.erb
+++ b/app/views/newspaper_works/base/_attribute_rows.html.erb
@@ -1,7 +1,7 @@
 <%# newspaper_core_metadata attributes %>
 <%= presenter.attribute_to_html(:alternative_title, render_as: :faceted) %>
 <%= presenter.attribute_to_html(:genre, render_as: :faceted) %>
-<%= presenter.attribute_to_html(:place_of_publication, render_as: :faceted) %>
+<%= presenter.attribute_to_html(:place_of_publication_label, render_as: :faceted) %>
 <%= presenter.attribute_to_html(:issn, render_as: :faceted) %>
 <%= presenter.attribute_to_html(:lccn, render_as: :faceted) %>
 <%= presenter.attribute_to_html(:oclcnum, render_as: :faceted) %>
@@ -22,19 +22,14 @@
 <%= presenter.attribute_to_html(:frequency, render_as: :faceted) %>
 <%= presenter.attribute_to_html(:preceded_by, render_as: :faceted) %>
 <%= presenter.attribute_to_html(:succeeded_by, render_as: :faceted) %>
-<%= presenter.attribute_to_html(:publication_date_start, render_as: :linked, search_field: `publication_date_start_dtsim`) %>
-<%= presenter.attribute_to_html(:publication_date_end, render_as: :faceted) %>
+<%= presenter.attribute_to_html(:publication_date_start) %>
+<%= presenter.attribute_to_html(:publication_date_end) %>
 <%# hyrax %>
 <%= presenter.attribute_to_html(:creator, render_as: :faceted) %>
 <%= presenter.attribute_to_html(:contributor, render_as: :faceted) %>
 <%= presenter.attribute_to_html(:subject, render_as: :faceted) %>
 <%= presenter.attribute_to_html(:publisher, render_as: :faceted) %>
 <%= presenter.attribute_to_html(:language, render_as: :faceted) %>
-<%= presenter.attribute_to_html(:identifier, render_as: :linked, search_field: 'identifier_tesim') %>
-<%= presenter.attribute_to_html(:keyword, render_as: :faceted) %>
-<%= presenter.attribute_to_html(:date_created, render_as: :linked, search_field: 'date_created_tesim') %>
-<%= presenter.attribute_to_html(:based_near_label) %>
-<%= presenter.attribute_to_html(:related_url, render_as: :external_link) %>
+<%= presenter.attribute_to_html(:identifier) %>
 <%= presenter.attribute_to_html(:resource_type, render_as: :faceted) %>
-<%= presenter.attribute_to_html(:source) %>
 <%= presenter.attribute_to_html(:rights_statement, render_as: :rights_statement) %>
