--- a/app/views/newspaper_works/base/_attribute_rows.html.erb
+++ b/app/views/newspaper_works/base/_attribute_rows.html.erb
@@ -1,6 +1,6 @@
 <%# newspaper_core_metadata attributes %>
 <%= presenter.attribute_to_html(:date_modified, label: t('hyrax.base.show.last_modified'), html_dl: true) %>
-<%= presenter.attribute_to_html(:alternative_title, render_as: :faceted, html_dl: true) %>
+<%= presenter.attribute_to_html(:alternative_title, html_dl: true) %>
 <%= presenter.attribute_to_html(:genre, render_as: :faceted, html_dl: true) %>
 <%= presenter.attribute_to_html(:place_of_publication_label, render_as: :faceted, html_dl: true) %>
 <%= presenter.attribute_to_html(:issn, render_as: :faceted, html_dl: true) %>
@@ -8,23 +8,20 @@
 <%= presenter.attribute_to_html(:oclcnum, render_as: :faceted, html_dl: true) %>
 <%= presenter.attribute_to_html(:held_by, render_as: :faceted, html_dl: true) %>
 <%# scanned_media_metadata attributes %>
-<%= presenter.attribute_to_html(:text_direction) %>
-<%= presenter.attribute_to_html(:page_number) %>
-<%= presenter.attribute_to_html(:section) %>
+<%= presenter.attribute_to_html(:text_direction, html_dl: true) %>
+<%= presenter.attribute_to_html(:page_number, html_dl: true) %>
+<%= presenter.attribute_to_html(:section, html_dl: true) %>
 <%# newspaper_article attributes %>
 <%= presenter.attribute_to_html(:author, render_as: :faceted, html_dl: true) %>
 <%= presenter.attribute_to_html(:photographer, render_as: :faceted, html_dl: true) %>
-<%= presenter.attribute_to_html(:volume) %>
-<%= presenter.attribute_to_html(:issue_number) %>
+<%= presenter.attribute_to_html(:volume, html_dl: true) %>
+<%= presenter.attribute_to_html(:issue_number, html_dl: true) %>
 <%= presenter.attribute_to_html(:geographic_coverage, render_as: :faceted, html_dl: true) %>
-<%= presenter.attribute_to_html(:extent) %>
+<%= presenter.attribute_to_html(:extent, html_dl: true) %>
 <%= presenter.attribute_to_html(:publication_date, render_as: :date, html_dl: true) %>
-<%# newspaper_page attributes %>
-<%= presenter.attribute_to_html(:height, render_as: :faceted, html_dl: true) %>
-<%= presenter.attribute_to_html(:width, render_as: :faceted, html_dl: true) %>
 <%# newspaper_title attributes %>
-<%= presenter.attribute_to_html(:edition) %>
-<%= presenter.attribute_to_html(:frequency) %>
+<%= presenter.attribute_to_html(:edition, html_dl: true) %>
+<%= presenter.attribute_to_html(:frequency, html_dl: true) %>
 <%= presenter.attribute_to_html(:preceded_by, render_as: :faceted, html_dl: true) %>
 <%= presenter.attribute_to_html(:succeeded_by, render_as: :faceted, html_dl: true) %>
 <%= presenter.attribute_to_html(:publication_date_start, render_as: :date, html_dl: true) %>
