--- a/app/views/newspaper_works/base/_attribute_rows.html.erb
+++ b/app/views/newspaper_works/base/_attribute_rows.html.erb
@@ -1,7 +1,7 @@
 <%# newspaper_core_metadata attributes %>
 <%= presenter.attribute_to_html(:date_modified, label: t('hyrax.base.show.last_modified'), html_dl: true) %>
 <%= presenter.attribute_to_html(:alternative_title, html_dl: true) %>
-<%= presenter.attribute_to_html(:genre, render_as: :genre, html_dl: true) %>
+<%= presenter.attribute_to_html(:genre, render_as: :faceted, html_dl: true) %>
 <%= presenter.attribute_to_html(:place_of_publication_label, render_as: :faceted, html_dl: true) %>
 <%= presenter.attribute_to_html(:issn, render_as: :faceted, html_dl: true) %>
 <%= presenter.attribute_to_html(:lccn, render_as: :faceted, html_dl: true) %>
