--- a/app/views/records/edit_fields/_genre.html.erb
+++ b/app/views/records/edit_fields/_genre.html.erb
@@ -1,7 +1,4 @@
-<%# based on hyrax/app/views/records/edit_fields/_rights_statement.html.erb %>
-<% genres = Hyrax::ArticleGenreService.new %>
-<%= f.input :genre,
-            collection: genres.select_active_options,
-            include_blank: false,
-            item_helper: genres.method(:include_current_value),
-            input_html: { class: 'form-control' } %>
+<%# based on hyrax/app/views/records/edit_fields/_resource_type.html.erb %>
+<%= f.input :genre, as: :select,
+            collection: Hyrax::ArticleGenreService.new.select_active_options,
+            input_html: { class: 'form-control', multiple: true } %>
