Update specs to build tests for newspaper titles and fix error that occured when a title had no issues

--- a/app/views/hyrax/newspaper_titles/show.html.erb
+++ b/app/views/hyrax/newspaper_titles/show.html.erb
@@ -18,40 +18,42 @@
         <%= render 'work_title', presenter: @presenter %>
       </div>
       <div class="panel-body">
-        <div class="row">
-          <h2 align="center">
-            <%= link_to("<<", main_app.hyrax_newspaper_title_path(params[:id], year: prev_year)) if prev_year %>
-            Issues: <%= year %>
-            <%= link_to(">>", main_app.hyrax_newspaper_title_path(params[:id], year: next_year)) if next_year %>
-          </h2>
-          <% for month in 1..12 %>
-            <div class="clndr-month col-xs-12 col-md-2 no-padding">
-              <h2 style="text-align: center;"><%= Date::MONTHNAMES[month] %></h2>
-              <% for day_name in 0..6 %>
-                <div style="display: inline-block; width: 17px; height: 10px; text-align: center;">
-                  <%= Date::DAYNAMES[day_name][0..1] %>
-                </div>
-              <% end %>
-            <% month_start = Date.new(year, month) %>
-            <% month_end = ((month_start>>1)-1) %>
-            <% month_start_print = month_start - month_start.wday %>
-            <% month_end_print = (month_end + 6) - (month_end.wday) %>
-            <% (month_start_print).upto(month_end_print) do |d| %>
-              <div style="<%= "color: gray;" if d.month != month  %> display: inline-block; width: 17px; height: 10px; text-align: center;" class="day <%= "adjacent_month" if d.month != month %> <%= "cal-#{d.strftime("%Y-%m-%d")}" %>">
-                <% issue = issues.select {|issue| issue["publication_date"] == d.strftime("%Y-%m-%d") }.first %>
-                <% if issue %>
-                  <strong><%= link_to d.day, main_app.hyrax_newspaper_issue_path(issue) %></strong>
-                <% else %>
-                  <%= d.day %>
+        <% if @presenter.year %>
+          <div class="row">
+            <h2 align="center">
+              <%= link_to("<<", main_app.hyrax_newspaper_title_path(params[:id], year: prev_year)) if prev_year %>
+              Issues: <%= year %>
+              <%= link_to(">>", main_app.hyrax_newspaper_title_path(params[:id], year: next_year)) if next_year %>
+            </h2>
+            <% for month in 1..12 %>
+              <div class="clndr-month col-xs-12 col-md-2 no-padding">
+                <h2 style="text-align: center;"><%= Date::MONTHNAMES[month] %></h2>
+                <% for day_name in 0..6 %>
+                  <div style="display: inline-block; width: 17px; height: 10px; text-align: center;">
+                    <%= Date::DAYNAMES[day_name][0..1] %>
+                  </div>
                 <% end %>
-              </div>
-              <% if d.wday == 6 %>
-                <br>
+              <% month_start = Date.new(year, month) %>
+              <% month_end = ((month_start>>1)-1) %>
+              <% month_start_print = month_start - month_start.wday %>
+              <% month_end_print = (month_end + 6) - (month_end.wday) %>
+              <% (month_start_print).upto(month_end_print) do |d| %>
+                <div style="<%= "color: gray;" if d.month != month  %> display: inline-block; width: 17px; height: 10px; text-align: center;" class="day <%= "adjacent_month" if d.month != month %> <%= "cal-#{d.strftime("%Y-%m-%d")}" %>">
+                  <% issue = issues.select {|issue| issue["publication_date"] == d.strftime("%Y-%m-%d") }.first %>
+                  <% if issue %>
+                    <strong><%= link_to d.day, main_app.hyrax_newspaper_issue_path(issue) %></strong>
+                  <% else %>
+                    <%= d.day %>
+                  <% end %>
+                </div>
+                <% if d.wday == 6 %>
+                  <br>
+                <% end %>
               <% end %>
+              </div>
             <% end %>
             </div>
           <% end %>
-        </div>
         <div class="col-sm-12">
           <%= render 'relationships', presenter: @presenter %>
           <%= render 'items', presenter: @presenter %>
