--- a/app/views/hyrax/newspaper_titles/show.html.erb
+++ b/app/views/hyrax/newspaper_titles/show.html.erb
@@ -14,33 +14,30 @@
       </div>
       <div class="panel-body">
         <% if @presenter.year %>
-          <div id="issues_calendar" class="row">
-            <% years = { current: @presenter.year, previous: @presenter.prev_year, next: @presenter.next_year } %>
-            <%= render partial: "issues_calendar", locals: { issues: @presenter.issues, years: years } %>
-          </div>
+            <%= render partial: "issues_calendar",
+                                 locals: { issues: @presenter.issues,
+                                           years: { current: @presenter.year, previous: @presenter.prev_year, next: @presenter.next_year } } %>
         <% end %>
         <div class="col-sm-12">
           <%= render 'relationships', presenter: @presenter %>
           <%= render 'items', presenter: @presenter %>
         </div>
-        <% if false %>
-          <div class="row">
-            <%= render 'workflow_actions_widget', presenter: @presenter %>
-            <% if @presenter.universal_viewer? %>
-              <div class="col-sm-12">
-                <%= render 'representative_media', presenter: @presenter, viewer: true %>
-              </div>
-            <% end %>
-            <div class="col-sm-3 text-center">
-              <%= render 'representative_media', presenter: @presenter, viewer: false unless @presenter.universal_viewer? %>
-              <%= render 'citations', presenter: @presenter %>
-              <%= render 'social_media' %>
-            </div>
-            <div class="col-sm-9">
-              <%= render 'work_description', presenter: @presenter %>
-              <%= render 'metadata', presenter: @presenter %>
+        <div class="row">
+          <%= render 'workflow_actions_widget', presenter: @presenter %>
+          <% if @presenter.universal_viewer? %>
+            <div class="col-sm-12">
+              <%= render 'representative_media', presenter: @presenter, viewer: true %>
             </div>
           <% end %>
+          <div class="col-sm-3 text-center">
+            <%= render 'representative_media', presenter: @presenter, viewer: false unless @presenter.universal_viewer? %>
+            <%= render 'citations', presenter: @presenter %>
+            <%= render 'social_media' %>
+          </div>
+          <div class="col-sm-9">
+            <%= render 'work_description', presenter: @presenter %>
+            <%= render 'metadata', presenter: @presenter %>
+          </div>
         </div>
       </div>
     </div>
