--- a/app/views/hyrax/newspaper_titles/_issues_calendar.html.erb
+++ b/app/views/hyrax/newspaper_titles/_issues_calendar.html.erb
@@ -21,7 +21,7 @@
     <% month_end_print = (month_end + 6) - (month_end.wday) %>
     <% (month_start_print).upto(month_end_print) do |d| %>
       <div class="day calendar_day <%= "calendar_day_inactive" if d.month != month  %> <%= "adjacent_month" if d.month != month %> <%= "cal-#{d.strftime("%Y-%m-%d")}" %>">
-        <% issue = issues.select {|issue| issue["publication_date"] == d.strftime("%Y-%m-%d") }.first %>
+        <% issue = issues.select {|issue| Date.parse(issue["publication_date_dtsim"].first) == d }.first %>
         <% if issue %>
           <strong><%= link_to d.day, main_app.hyrax_newspaper_issue_path(issue) %></strong>
         <% else %>
