--- a/app/views/hyrax/newspaper_titles/show.html.erb
+++ b/app/views/hyrax/newspaper_titles/show.html.erb
@@ -12,6 +12,7 @@
       <div class="panel-heading">
         <%= render 'work_title', presenter: @presenter %>
       </div>
+      <%= @presenter.issues %>
       <div class="panel-body">
         <% if @presenter.year %>
             <%= render partial: "issues_calendar",
