Add page search widget to newspaper titles show page

--- a/app/views/hyrax/newspaper_titles/show.html.erb
+++ b/app/views/hyrax/newspaper_titles/show.html.erb
@@ -13,6 +13,7 @@
         <%= render 'work_title', presenter: @presenter %>
       </div>
       <div class="panel-body">
+        <%= render partial: "issue_search_form", locals: { publication_id: @presenter.id } %>
         <% if @presenter.year %>
             <%= render partial: "issues_calendar",
                                  locals: { issues: @presenter.issues,
