--- a/app/views/hyrax/newspaper_titles/show.html.erb
+++ b/app/views/hyrax/newspaper_titles/show.html.erb
@@ -14,7 +14,7 @@
         <%= render 'work_title', presenter: @presenter %>
       </div>
       <div class="panel-body">
-        <%= render partial: "issue_search_form", locals: { publication_id: @presenter.id } %>
+        <%= render partial: "issue_search_form", presenter: @presenter %>
         <% if @presenter.year %>
             <%= render partial: "hyrax/newspaper_titles/issues_calendar",
                                  locals: { issues: @presenter.issues,
