--- a/app/views/hyrax/newspaper_titles/_issue_search_form.html.erb
+++ b/app/views/hyrax/newspaper_titles/_issue_search_form.html.erb
@@ -6,15 +6,18 @@
       <%= render_hash_as_hidden_fields(search_state.params_for_search
                                                    .except('q', 'search_field', 'qt', 'page')
                                                    .merge(@presenter.title_search_params)) %>
+      <%= hidden_field_tag :search_field, 'all_fields' %>
 
       <div class="input-group pull-left">
         <label for="q_coll" class="sr-only"><%= t('blacklight.search.form.collection') %></label>
         <%= text_field_tag :q,
                            params[:q],
+                           :required => true,
                            :placeholder => t('blacklight.search.form.pages'),
                            :class => 'search_q q form-control',
                            :id => 'q_coll',
                            :autofocus => false %>
+
         <span class="input-group-btn">
           <button type="submit" class="btn btn-primary search-btn" id="issue-search">
             <span class="submit-search-text"><%=t('blacklight.search.form.submit')%></span>
