--- a/app/views/newspaper_works/newspapers_search/_facet_layout.html.erb
+++ b/app/views/newspaper_works/newspapers_search/_facet_layout.html.erb
@@ -1,5 +1,5 @@
 <div class="form-group facet_item blacklight-<%= facet_field.field.parameterize %>">
-  <label class="control-label col-sm-2"><%= facet_field.label %></label>
+  <label class="control-label col-sm-2"><%= facet_field_label(facet_field.field) %></label>
   <div class="col-sm-8 facet_scrollbox_wrapper well">
     <div class="facet_limit_scrollbox col-sm-12">
       <%= yield %>
