--- a/app/views/newspaper_works/newspapers_search/_newspapers_search_form.html.erb
+++ b/app/views/newspaper_works/newspapers_search/_newspapers_search_form.html.erb
@@ -1,24 +1,13 @@
-<%= form_tag search_form_action, method: :get, class: "form-horizontal search-form", id: "newspapers_search_form", role: "search" do %>
+<%= form_tag main_app.search_catalog_path, method: :get,
+             class: "form-horizontal search-form",
+             id: "newspapers_search_form", role: "search" do %>
   <%= render_hash_as_hidden_fields(search_state.params_for_search.except(:q, :search_field, :qt, :page, :utf8)) %>
-  <%= hidden_field_tag :search_field, 'all_fields' %>
-  <div class="form-group">
+  <%= hidden_field_tag :search_field, 'advanced' %>
 
-    <label class="control-label col-sm-3" for="search-field-header">
-      <%= t("hyrax.search.form.q.label", application_name: application_name) %>
-    </label>
+  <%= render 'keyword_input' %>
 
-    <div class="input-group">
-      <%= text_field_tag :q, current_search_parameters , class: "q form-control", id: "q_newspapers", placeholder: t("hyrax.search.form.q.placeholder") %>
-
-      <div class="input-group-btn">
-        <button type="submit" class="btn btn-primary" id="search-submit-header">
-          <%= t('hyrax.search.button.html') %>
-        </button>
-      </div><!-- /.input-group-btn -->
-    </div><!-- /.input-group -->
-  </div><!-- /.form-group -->
+  <%= render 'date_fields' %>
 
   <%= render 'newspapers_facets' %>
 
-  <%# render 'date_fields' %>
 <% end %>
