fully functional implementation of newspapers search interface

--- a/app/views/newspaper_works/newspapers_search/_date_fields.html.erb
+++ b/app/views/newspaper_works/newspapers_search/_date_fields.html.erb
@@ -1,10 +1,10 @@
 <div id="date_range_limit_wrapper" class="newspapers_search_field">
   <div class="form-group" id="date_range_limit">
-    <label class="control-label col-sm-2 ">
+    <label class="control-label col-sm-3 ">
       <%= t("newspaper_works.newspapers_search.fields.date_range") %>
     </label>
-    <div class="col-sm-8">
-      <div class="input-group col-sm-4">
+    <div class="col-sm-7">
+      <div class="input-group col-sm-5 date_input">
         <label id="date_range_start_label" class="input-group-addon" for="date_start">
           <%= t("newspaper_works.newspapers_search.fields.date_start") %>
         </label>
@@ -14,7 +14,7 @@
                            :class => 'form-control',
                            :maxlength => 4 %>
       </div>
-      <div class="input-group col-sm-4">
+      <div class="input-group col-sm-5 date_input">
         <label id="date_range_end_label" class="input-group-addon" for="date_end">
           <%= t("newspaper_works.newspapers_search.fields.date_end") %>
         </label>
