--- a/app/views/newspaper_works/newspapers_search/_newspapers_search_help.html.erb
+++ b/app/views/newspaper_works/newspapers_search/_newspapers_search_help.html.erb
@@ -1,4 +1,4 @@
-<div id="newspapers_search_help">
+<div id="newspapers_search_help" class="well">
   <h5><%= t('newspaper_works.newspapers_search.help.title') %></h5>
   <ul class="newspapers_help">
     <% t('newspaper_works.newspapers_search.help.tips').values.each do |tip| %>
