--- a/app/views/newspaper_works/newspapers_search/_keyword_input.html.erb
+++ b/app/views/newspaper_works/newspapers_search/_keyword_input.html.erb
@@ -4,11 +4,11 @@
   </label>
   <div class="col-sm-7">
     <div class="input-group">
-      <%= text_field_tag :q, current_search_parameters , class: "q form-control",
+      <%= text_field_tag :q, current_search_parameters, class: "q form-control",
                          name: "all_fields", id: "all_fields",
                          placeholder: t("hyrax.search.form.q.placeholder") %>
       <div class="input-group-btn">
-        <button type="submit" class="btn btn-primary" id="search-submit-header">
+        <button type="submit" class="btn btn-primary" id="search-submit-newspapers">
           <%= t('hyrax.search.button.html') %>
         </button>
       </div><!-- /.input-group-btn -->
