--- a/app/views/newspaper_works/newspapers_search/_front_pages_input.html.erb
+++ b/app/views/newspaper_works/newspapers_search/_front_pages_input.html.erb
@@ -3,7 +3,7 @@
     <%# t("newspaper_works.newspapers_search.fields.keyword") %>
   </label>
   <div class="col-sm-7">
-    Limit search to front pages:
+    <%= t("newspaper_works.newspapers_search.fields.front_pages") %>:
     <%= check_box_tag(:front_pages, true, false, class: 'front_pages_checkbox' ) %>
   </div>
 </div>
