use shared fixtures for feature specs; misc. cleanup

--- a/app/views/newspaper_works/newspapers_search/_front_pages_input.html.erb
+++ b/app/views/newspaper_works/newspapers_search/_front_pages_input.html.erb
@@ -1,9 +1,5 @@
-<div id="front_pages_input" class="form-group newspapers_search_field">
-  <label class="control-label col-sm-3">
-    <%# t("newspaper_works.newspapers_search.fields.keyword") %>
-  </label>
-  <div class="col-sm-7">
-    <%= t("newspaper_works.newspapers_search.fields.front_pages") %>:
-    <%= check_box_tag(:front_pages, true, false, class: 'front_pages_checkbox' ) %>
-  </div>
+<div id="front_pages_input">
+  <%= t("newspaper_works.newspapers_search.fields.front_pages") %>:
+  <%= check_box_tag('f[first_page_bsi][]', true,
+                    false, class: 'front_pages_checkbox' ) %>
 </div>
