--- a/app/views/newspaper_works/newspapers_search/_keyword_input.html.erb
+++ b/app/views/newspaper_works/newspapers_search/_keyword_input.html.erb
@@ -13,10 +13,6 @@
         </button>
       </div><!-- /.input-group-btn -->
     </div><!-- /.input-group -->
-    <div id="front_pages_input">
-      <%= t("newspaper_works.newspapers_search.fields.front_pages") %>
-      <%= check_box_tag('f[first_page_bsi][]', true,
-                        false, class: 'front_pages_checkbox' ) %>
-    </div>
+    <%= render 'front_pages_input' %>
   </div>
 </div><!-- /.form-group -->
