Move newspaper-specific breadcrumbs into main show page

--- a/app/views/newspaper_works/base/_show.html.erb
+++ b/app/views/newspaper_works/base/_show.html.erb
@@ -12,6 +12,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">
         <%= render 'work_title', presenter: @presenter %>
+        <%= render 'newspaper_works/base/newspaper_hierarchy', presenter: @presenter %>
       </div>
       <div class="panel-body">
         <div class="row">
