--- a/app/views/newspaper_works/base/_newspaper_hierarchy.html.erb
+++ b/app/views/newspaper_works/base/_newspaper_hierarchy.html.erb
@@ -1,8 +1,8 @@
 <div id="newspaper_hierarchy" class="breadcrumb">
   <ol>
-  <li><%= link_to 'Home', root_path %></li>
-  <% newspaper_breadcrumbs(presenter).each do |link| %>
+  <% newspaper_breadcrumbs(presenter).each do |link| -%>
     <li><%= link %></li>
   <% end %>
+  <li><%= presenter.title.first %></li>
   </ol>
 </div>
