Add next and previous page navigation to the show page if the presenter returns a valid  or  respectively.

--- a/app/views/newspaper_works/base/_newspaper_hierarchy.html.erb
+++ b/app/views/newspaper_works/base/_newspaper_hierarchy.html.erb
@@ -4,4 +4,6 @@
     <li><%= link %></li>
   <% end %>
   </ol>
+  <%= previous_page_link(presenter) if presenter.respond_to?(:previous_page_id) && presenter&.previous_page_id  %>
+  <%= next_page_link(presenter) if presenter.respond_to?(:next_page_id) && presenter&.next_page_id %>
 </div>
