--- a/app/views/catalog/_index_gallery_newspaper_page_wrapper.html.erb
+++ b/app/views/catalog/_index_gallery_newspaper_page_wrapper.html.erb
@@ -1,5 +1,5 @@
 <div class="document col-xs-6 col-md-3">
-  <div class="thumbnail">
+  <div class="thumbnail" data-fileset="<%= document.file_set_ids.first  %>" data-query="<%= search_query(current_search_session.query_params) %>" data-height="<%= document['height_is'] %>" data-width="<%= document['width_is'] %>">
     <%= render_newspaper_thumbnail_tag(document,
                                        current_search_session.query_params) %>
     <div class="caption">
