--- a/app/views/catalog/_thumbnail_list_newspaper_page.html.erb
+++ b/app/views/catalog/_thumbnail_list_newspaper_page.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-2">
-  <div class="list-thumbnail">
+  <div class="list-thumbnail" data-fileset="<%= document.file_set_ids.first %>" data-query="<%= search_query(current_search_session.query_params) %>" data-height="<%= document['height_is'] %>" data-width="<%= document['width_is'] %>">
     <%= render_newspaper_thumbnail_tag(document,
                                        current_search_session.query_params) %>
   </div>
